--- a/appspec.yml
+++ b/appspec.yml
@@ -5,7 +5,7 @@ files:
     destination: /var/www/html/
 hooks:
   BeforeInstall:
-    - location: /var/www/html/before_install.sh
+    - location: ./var/www/html/before_install.sh
       timeout: 300
       runas: root
   AfterInstall:
