--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,4 @@ phases:
   pre_build:
     commands:
       - curl -sS https://getcomposer.org/installer | php && mv composer.phar /usr/local/bin/composer && chmod +x /usr/local/bin/composer
-      - composer self-update
-      - composer install --prefer-source --no-interaction --dev --no-scripts
-      - php artisan key:generate
+      - bash ./lara.sh
