--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,4 +4,4 @@ phases:
   pre_build:
     commands:
       - curl -sS https://getcomposer.org/installer | php && mv composer.phar /usr/local/bin/composer && chmod +x /usr/local/bin/composer
-      - bash ./lara.sh
+      - bash lara.sh
