--- a/buildspec.yml
+++ b/buildspec.yml
@@ -45,6 +45,7 @@ phases:
    commands:
      - echo Build started on `date`
      - echo Installing composer deps
+     - cd /var/www/html
      - composer install --no-progress --no-suggest
 
  post_build:
