--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
          apt-get install -y  software-properties-common
          LC_ALL=C.UTF-8 add-apt-repository -y ppa:ondrej/php
          apt-get update
-         # Install PHP
+         # Install PHP 7
          apt-get install -y php7.1\
                   php7.1-ldap \
                   php7.1-xml \
