--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
          LC_ALL=C.UTF-8 add-apt-repository -y ppa:ondrej/php
          apt-get update
          # Install PHP 7
-         apt-get install -y php7.1\
+         sudo apt-get install -y php7.1\
                   php7.1-ldap \
                   php7.1-xml \
                   php7.1-xmlrpc \
@@ -45,7 +45,6 @@ phases:
    commands:
      - echo Build started on `date`
      - echo Installing composer deps
-     - cd /var/www/html
      - composer install --no-progress --no-suggest --no-scripts
 
  post_build:
@@ -55,4 +54,4 @@ phases:
      # If you don't need it delete it
      # - /usr/bin/mysql  -u root -e "GRANT ALL ON *.* TO 'test'@'localhost' IDENTIFIED BY '' WITH GRANT OPTION"
      # - mysqladmin -u test create test
-     - ./vendor/bin/phpunit
+     - /vendor/bin/phpunit
